--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "vite-plugin-laravel": "^0.2.2"
     },
     "dependencies": {
-        "vue": "^3.2.36",
         "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-vue3": "^0.6.0"
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@tinymce/tinymce-vue": "^4.0.7",
+        "tinymce": "^6.2.0",
+        "vue": "^3.2.36"
     }
 }
