--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "@sipec/vue3-tags-input": "^3.0.4",
         "@tinymce/tinymce-vue": "^4.0.7",
         "tinymce": "^6.2.0",
         "vue": "^3.2.36"
