--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.3",
         "innocenzi/laravel-vite": "0.2.*",
@@ -16,7 +17,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "pestphp/pest": "^1.22",
-        "pestphp/pest-plugin-laravel": "^1.3"
+        "pestphp/pest-plugin-laravel": "^1.3",
+        "spatie/laravel-tags": "^4.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
