--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@sipec/vue3-tags-input": "^3.0.4",
         "@tinymce/tinymce-vue": "^4.0.7",
+        "laravel-vue-pagination": "^4.0.0",
         "tinymce": "^6.2.0",
         "vue": "^3.2.36"
     }
