implement open posts list styling

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
+APP_NAME="幸運之翼學習筆記"
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=false
+APP_KEY=base64:aK04GGci3kNEchRl/7sK9swSnRVQ5nktuJQiLgm5MO8=
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=daily
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=default
+DB_USERNAME=admin
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,6 +57,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-DEV_SERVER_URL=http://localhost:3000
+DEV_SERVER_URL=http://localhost:10022
 DEV_SERVER_KEY=
 DEV_SERVER_CERT=
+
+CONTACT_ME=marco@marcocyclops.com
